dataset1235/2025-2/2947369575/users/2975895382/executions/3873599344_291286518.log
== RUN (2025-08-20 23:09:42)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = numeroLido.dobraNumero()

print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:15:01)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2

  def imprimeDobrado(self):
    return print(dobraNumero(numero))
    
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))


# Impressao do dobro do numero
numeroLido = DobraNumero(num)
dobrado = numeroLido.dobraNumero()

numeroLido.imprimeDobrado()
#print(dobrado)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    numeroLido.imprimeDobrado()
  File "XXXX", line 12, in imprimeDobrado
    return print(dobraNumero(numero))
                 ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    numeroLido.imprimeDobrado()
  File "XXXX", line 12, in imprimeDobrado
    return print(dobraNumero(numero))
                 ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    numeroLido.imprimeDobrado()
  File "XXXX", line 12, in imprimeDobrado
    return print(dobraNumero(numero))
                 ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    numeroLido.imprimeDobrado()
  File "XXXX", line 12, in imprimeDobrado
    return print(dobraNumero(numero))
                 ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    numeroLido.imprimeDobrado()
  File "XXXX", line 12, in imprimeDobrado
    return print(dobraNumero(numero))
                 ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:15:56)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
    
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))


# Impressao do dobro do numero
numeroLido = DobraNumero(num)
dobrado = numeroLido.dobraNumero()

print(dobrado)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:08:22)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = dobraNumero()
print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:09:43)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = numeroLido.dobraNumero()

print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:08:44)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    self.numero * 2
    
  def imprimeNumero(self):
    print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = dobraNumero()
print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    dobrado = dobraNumero()
              ^^^^^^^^^^^
NameError: name 'dobraNumero' is not defined. Did you mean: 'DobraNumero'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:09:04)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = numeroLido.dobraNumero()
print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:09:36)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = numeroLido.dobraNumero()

print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:06:04)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)

numeroLido.dobraNumero(numeroLido.imprimeNumero())
# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    numeroLido.dobraNumero(numeroLido.imprimeNumero())
TypeError: DobraNumero.dobraNumero() takes 1 positional argument but 2 were given
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    numeroLido.dobraNumero(numeroLido.imprimeNumero())
TypeError: DobraNumero.dobraNumero() takes 1 positional argument but 2 were given
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    numeroLido.dobraNumero(numeroLido.imprimeNumero())
TypeError: DobraNumero.dobraNumero() takes 1 positional argument but 2 were given
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    numeroLido.dobraNumero(numeroLido.imprimeNumero())
TypeError: DobraNumero.dobraNumero() takes 1 positional argument but 2 were given
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    numeroLido.dobraNumero(numeroLido.imprimeNumero())
TypeError: DobraNumero.dobraNumero() takes 1 positional argument but 2 were given
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:05:51)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f`self.numero`)
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)

numeroLido.dobraNumero(numeroLido.imprimeNumero())
# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 12
    return print(f`self.numero`)
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 12
    return print(f`self.numero`)
                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 12
    return print(f`self.numero`)
                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 12
    return print(f`self.numero`)
                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 12
    return print(f`self.numero`)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:09:25)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    self.numero * 2
    
  def imprimeNumero(self):
    print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = numeroLido.dobraNumero()

print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:09:32)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = numeroLido.dobraNumero()

print(dobrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:25:34)
-- CODE: 
# Use este codigo como ponto de partida
    
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
dobrado = num*2

print(dobrado)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:10:52)
-- CODE: 
# Use este codigo como ponto de partida

#Tentando lembrar como funciona classe
class DobraNumero:
  def __init__(self, numero):
    self.numero = numero

  def dobraNumero(self):
    return self.numero * 2
    
  def imprimeNumero(self):
    return print(f'self.numero')

  
  
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

numeroLido = DobraNumero(num)


# Impressao do dobro do numero
dobrado = numeroLido.dobraNumero()

print(dobrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
